[package]
name = "dst"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.83"
clap = { version = "4.5.21", features = ["derive"] }
futures = "0.3.31"
rand = "0.8.5"
rand_chacha = "0.3.1"
rdkafka = "0.36.2"
redis = { version = "0.27.5", features = ["aio", "tokio-comp"] }
tokio = { version = "1.41.1", features = ["full", "fs"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
