[package]
name = "dst"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.83"
clap = { version = "4.5.21", features = ["derive"] }
color-eyre = "0.6.3"
futures = "0.3.31"
rand = "0.8.5"
rand_chacha = "0.3.1"
ratatui = { version = "0.29.0", features = ["all-widgets"] }
rdkafka = "0.36.2"
redis = { version = "0.27.5", features = ["aio", "tokio-comp"] }
tokio = { version = "1.41.1", features = ["full", "fs"] }
tracing = "0.1.40"
tracing-appender = "0.2.3"
tracing-subscriber = "0.3.18"
